@@ -23,8 +23,14 @@ TARGET="Resource Window">Mandrake Linux</a> Contribs<br><br>
 <a href="http://www.gentoo.org/cgi-bin/viewcvs.cgi/gentoo-x86/net-mail/tmda/" 
 TARGET="Resource Window">(net-mail/tmda)</a><br><br>
 
-<li>If you run FreeBSD, TMDA is part of the "ports" collection
-<a href="http://www.freebsd.org/cgi/cvsweb.cgi/ports/mail/tmda/" TARGET="Resource Window">(mail/tmda)</a>
+<li>TMDA is part of the NetBSD Packages collection
+<a href="ftp://ftp.netbsd.org/pub/NetBSD/packages/pkgsrc/mail/tmda/README.html"
+TARGET="Resource Window">(mail/tmda)</a>
+<br><br>
+
+<li>TMDA is part of the FreeBSD "ports" collection
+<a href="http://www.freebsd.org/cgi/cvsweb.cgi/ports/mail/tmda/" 
+TARGET="Resource Window">(mail/tmda)</a>
 <br><br>
 </ul>
 
