@@ -1,3 +1,9 @@
+2002-02-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* features.ht (Links): Mention NetBSD package.
+
+	* download.ht: Link to the NetBSD package.
+
 2002-02-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* download.ht: Update FreeBSD port URL; link to Mandrake Linux
